--- a/arch/arm/configs/cm_x909t_defconfig
+++ b/arch/arm/configs/cm_x909t_defconfig
@@ -3503,7 +3503,10 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 #
 # Qualcomm Atheros Prima WLAN module
 #
-# CONFIG_PRIMA_WLAN is not set
+CONFIG_PRIMA_WLAN=y
+# CONFIG_PRIMA_WLAN_BTAMP is not set
+CONFIG_PRIMA_WLAN_LFR=y
+CONFIG_PRIMA_WLAN_OKC=y
 
 #
 # Qualcomm MSM specific device drivers
