--- a/arch/arm/configs/cm_x909t_defconfig
+++ b/arch/arm/configs/cm_x909t_defconfig
@@ -1823,6 +1823,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_LGE_COMMON is not set
 # CONFIG_TOUCHSCREEN_LGE_SYNAPTICS is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_S3202_I2C_RMI=y
+CONFIG_TOUCHSCREEN_BKTP=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -2810,6 +2811,7 @@ CONFIG_FB_MSM_TVOUT_NONE=y
 CONFIG_FB_MSM_DEFAULT_DEPTH_RGBA8888=y
 # CONFIG_FB_MSM_EBI2_EPSON_S1D_QVGA_PANEL is not set
 # CONFIG_FB_MSM_EBI2_PANEL_DETECT is not set
+CONFIG_FB_MSM_MIPI_BACKLIGHT_LM3630=y
 # CONFIG_EXYNOS_VIDEO is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=m
