--- a/arch/arm/configs/cm_x909t_defconfig
+++ b/arch/arm/configs/cm_x909t_defconfig
@@ -1823,6 +1823,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_LGE_COMMON is not set
 # CONFIG_TOUCHSCREEN_LGE_SYNAPTICS is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_S3202_I2C_RMI=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_S2W=y
 CONFIG_TOUCHSCREEN_BKTP=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
